[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/maps/StartScene.gd" type="Script" id=1]
[ext_resource path="res://DOSIyagiBoldface.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="StartScene" type="Control"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="newgamebutton" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 400.0
margin_top = 300.0
margin_right = 600.0
margin_bottom = 350.0
text = "New Game"

[node name="loadgamebutton" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 400.0
margin_top = 400.0
margin_right = 600.0
margin_bottom = 450.0
text = "Load Game"

[node name="exitgamebutton" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 400.0
margin_top = 500.0
margin_right = 600.0
margin_bottom = 550.0
text = "Exit Game"

[node name="PopupDialog" type="PopupDialog" parent="CanvasLayer"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -840.5
margin_top = -542.0
margin_right = -183.5
margin_bottom = -58.0

[node name="Label" type="Label" parent="CanvasLayer/PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -16.0
margin_right = 96.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Really Exit?"

[node name="yesbutton" type="Button" parent="CanvasLayer/PopupDialog"]
anchor_left = 0.179
anchor_top = 0.723
anchor_right = 0.471
anchor_bottom = 0.764
margin_left = -0.103004
margin_top = 0.0679626
margin_right = 0.0529785
margin_bottom = 0.223969
text = "Yes"

[node name="nobuton" type="Button" parent="CanvasLayer/PopupDialog"]
anchor_left = 0.509
anchor_top = 0.725
anchor_right = 0.801
anchor_bottom = 0.767
margin_left = 0.0870056
margin_top = 0.0999756
margin_right = 0.242981
margin_bottom = -0.227997
text = "No"

[connection signal="pressed" from="CanvasLayer/ColorRect/newgamebutton" to="." method="_on_newgamebutton_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/exitgamebutton" to="." method="_on_exitgamebutton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupDialog/yesbutton" to="." method="_on_yesbutton_pressed"]
[connection signal="pressed" from="CanvasLayer/PopupDialog/nobuton" to="." method="_on_nobuton_pressed"]
